<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcdcdc"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="12dp">


    <com.hyh.www.common.widget.CircularImageView
        android:id="@+id/circular"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitXY" />


    <com.hyh.www.common.widget.myview.PeopleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#222"
        android:textSize="16sp"
        app:birthplace="@string/birthplace"
        app:careers="@string/careers"
        app:name="@string/name"
        app:nationality="@string/nationality"
        app:sex="@string/sex"
        app:age="600"
        app:adult="true"
        app:high="192"
        app:weight="200"
        app:obese="mid"/>
</LinearLayout>